# hnix

./: .dockerignore  .fourmolu.yaml  .gitignore  .gitmodules  .hlint.yaml  .travis.yml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  ChangeLog.md  Dockerfile  LICENSE  LICENSE.md  Makefile  Nix.hs  PLAN.org  README-design.md  README.md  ReadMe.md  brittany.yaml  build.nix  build.sh  cabal.project  default.nix  flake.nix  ghcjs.nix  hnix.cabal  hydra.json  jobsets.nix  lefthook.yml  nixpkgs.nix  package.yaml  project.nix  release.nix  shell.nix  test-nixpkgs-modules.sh
.github/workflows/: Cabal-Linux.yml  Cabal-macOS.yml  HLint.yml  Nixpkgs-GHC-Linux.yml  Nixpkgs-GHCJS-turned-off  Nixpkgs-GHCJS.yml  Nixpkgs-Linux-additional.yml  Nixpkgs-Linux-main.yml  Nixpkgs-Linux.yml  Nixpkgs-macOS.yml  On-Readme-update.yml  On-Release-Cabal-Linux.yml  On-Release-Nixpkgs-integration.yml  Optional-Nix-dev-env-macOS.yml  Optional-Nix-dev-env-main.yml  Quality.yml  main.yml  test.yml
Nix/: Atoms.hs  Builtins.hs  Eval.hs  Expr.hs  Internal.hs  Lint.hs  Monad.hs  Parser.hs  Pretty.hs  Scope.hs  Stack.hs  StringOperations.hs  Thunk.hs  Types.hs  Utils.hs  Value.hs  XML.hs
Nix/Expr/: Shorthands.hs  Types.hs
Nix/Expr/Types/: Annotated.hs
Nix/Monad/: Instance.hs
Nix/Parser/: Library.hs  Operators.hs
benchmarks/: Main.hs  ParserBench.hs
data/: let-comments-multiline.nix  let-comments.nix  let.nix  nixpkgs-all-packages-pretty.nix  simple-pretty.nix  simple.nix
data/nix/: README.md
data/nix/tests/lang/: eval-okay-merge-nested-attrs-1.nix  eval-okay-merge-nested-attrs-2.exp  eval-okay-merge-nested-attrs-2.nix  eval-okay-merge-nested-attrs-3.nix  eval-okay-merge-nested-attrs-4.exp  eval-okay-merge-nested-attrs-4.nix  eval-okay-merge-nested-attrs-5.exp  eval-okay-merge-nested-attrs-5.nix  eval-okay-merge-nested-attrs-6.exp  eval-okay-merge-nested-attrs-6.nix
doc/: attrset-desugaring-issue.md  strict-benchmarks.md
ghcjs/: default.nix
ghcjs-infra/: nix.conf
main/: Main.hs  Nix.hs  Repl.hs
real-store/nix/var/nix/db/: db.sqlite
real-store/nix/var/nix/gcroots/: profiles
src/: Nix.hs  Prelude.hs
src/Nix/: Atoms.hs  Builtins.hs  Cache.hs  Cited.hs  Context.hs  Convert.hs  Core.hs  Effects.hs  Entry.hs  Entry.hs-boot  Eval.hs  EvalStats.hs  Exec.hs  Expr.hs  FileType.hs  Frames.hs  Fresh.hs  Json.hs  Lint.hs  List.hs  Monad.hs  NixString.hs  Normal.hs  Options.hs  Parser.hs  Prelude.hs  Pretty.hs  Reduce.hs  Render.hs  Scope.hs  Stack.hs  Stack.hs-boot  Standard.hs  String.hs  StringOperations.hs  Strings.hs  Syntax.hs  TH.hs  Thunk.hs  Trace.hs  (+5 more)
src/Nix/Cited/: Basic.hs
src/Nix/Config/: Singleton.hs
src/Nix/Effects/: Basic.hs  Derivation.hs
src/Nix/Expr/: Desugar.hs  Shorthands.hs  Strings.hs  Types.hs
src/Nix/Expr/Types/: Annotated.hs
src/Nix/Fresh/: Basic.hs  Stable.hs
src/Nix/Monad/: Context.hs  Instance.hs  Lazy.hs  Lint.hs
src/Nix/Options/: Parser.hs
src/Nix/Parser/: Library.hs  Operators.hs
src/Nix/Render/: Frame.hs
src/Nix/Scope/: Basic.hs
src/Nix/Store/: Overlay.hs
src/Nix/String/: Coerce.hs
src/Nix/Thunk/: Basic.hs  FreshStableIdT.hs  Separate.hs  StableId.hs  Standard.hs
src/Nix/Type/: Assumption.hs  Env.hs  Infer.hs  LICENSE  README.md  Type.hs
src/Nix/Utils/: Fix1.hs
src/Nix/Value/: Equal.hs  Monad.hs
tests/: EvalTests.hs  Main.hs  NixLanguageTests.hs  ParserTests.hs  PrettyParseTests.hs  PrettyTests.hs  ReduceExprTests.hs  ShorthandTests.hs  TestCommon.hs
tests/eval-compare/: builtins.appendContext.nix  builtins.eq-buttom-00.nix  builtins.fetchurl-01.nix  builtins.fromJSON-01.nix  builtins.getContext.nix  builtins.lessThan-01.nix  builtins.mapAttrs-01.nix  builtins.pathExists.nix  builtins.readFile-01.nix  builtins.replaceStrings-01.nix  builtins.split-01.nix  builtins.split-02.nix  builtins.split-03.nix  builtins.split-04.nix  builtins.string.store.nix  builtins.toJSON.nix  current-system.nix  ellipsis.nix  ind-string-01.nix  ind-string-02.nix  ind-string-03.nix  ind-string-04.nix  ind-string-05.nix  ind-string-06.nix  ind-string-07.nix  ind-string-08.nix  ind-string-09.nix  ind-string-10.nix  ind-string-11.nix  ind-string-12.nix  ind-string-13.nix  ind-string-14.nix.broken  ind-string-15.nix  ind-string-16.nix  ind-string-17.nix  ind-string-18.nix  ind-string-19.nix  nixpkgs.hello.nix  paths-01.nix  placeholder.nix
tests/files/: attrs.nix  callLibs.nix  file.nix  file2.nix  force.nix  goodbye.nix  hello.nix  hello2.nix  if-then.nix  lint.nix  loop.nix  test.nix  with.nix
tests/parser-compare/: 01-string-escapes.sh  02-nix-test-suite.sh  03-edge-cases.sh  run-all.sh
tests/parser-compare/fixtures/: crlf.nix  indentation.nix  nested-interp.nix  paths.nix  string-escapes.nix  unicode.nix
