name:           hnix
version:        0.7.1
synopsis:       Haskell implementation of the Nix language
description:    Haskell implementation of the Nix language.
category:       System, Data, Nix
homepage:       https://github.com/haskell-nix/hnix#readme
bug-reports:    https://github.com/haskell-nix/hnix/issues
author:         John Wiegley
maintainer:     johnw@newartisans.com
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    data/nix/misc/upstart/nix-daemon.conf.in
    data/nix/misc/upstart/local.mk
    data/nix/misc/systemv/nix-daemon
    data/nix/misc/systemd/nix-daemon.socket.in
    data/nix/misc/systemd/nix-daemon.service.in
    data/nix/misc/systemd/local.mk
    data/nix/misc/launchd/org.nixos.nix-daemon.plist.in
    data/nix/misc/launchd/local.mk
    data/nix/Makefile.config.in
    data/nix/.dir-locals.el
    data/nix/configure.ac
    data/nix/corepkgs/buildenv.nix
    data/nix/corepkgs/unpack-channel.nix
    data/nix/corepkgs/derivation.nix
    data/nix/corepkgs/imported-drv-to-derivation.nix
    data/nix/corepkgs/config.nix.in
    data/nix/corepkgs/fetchurl.nix
    data/nix/corepkgs/local.mk
    data/nix/config/install-sh
    data/nix/config/config.guess
    data/nix/config/config.sub
    data/nix/Makefile
    data/nix/perl/Makefile.config.in
    data/nix/perl/configure.ac
    data/nix/perl/Makefile
    data/nix/perl/MANIFEST
    data/nix/perl/lib/Nix/Store.pm
    data/nix/perl/lib/Nix/Manifest.pm
    data/nix/perl/lib/Nix/Store.xs
    data/nix/perl/lib/Nix/Utils.pm
    data/nix/perl/lib/Nix/CopyClosure.pm
    data/nix/perl/lib/Nix/SSH.pm
    data/nix/perl/lib/Nix/Config.pm.in
    data/nix/perl/local.mk
    data/nix/nix.spec.in
    data/nix/tests/check-refs.sh
    data/nix/tests/check-reqs.sh
    data/nix/tests/secure-drv-outputs.nix
    data/nix/tests/user-envs.nix
    data/nix/tests/dependencies.builder1.sh
    data/nix/tests/check-refs.nix
    data/nix/tests/case.nar
    data/nix/tests/hash.sh
    data/nix/tests/multiple-outputs.sh
    data/nix/tests/optimise-store.sh
    data/nix/tests/hash-check.nix
    data/nix/tests/nar-access.nix
    data/nix/tests/secure-drv-outputs.sh
    data/nix/tests/gc-concurrent.builder.sh
    data/nix/tests/gc-concurrent.sh
    data/nix/tests/config.nix
    data/nix/tests/brotli.sh
    data/nix/tests/search.nix
    data/nix/tests/parallel.builder.sh
    data/nix/tests/gc-concurrent2.builder.sh
    data/nix/tests/simple.builder.sh
    data/nix/tests/search.sh
    data/nix/tests/structured-attrs.nix
    data/nix/tests/linux-sandbox.sh
    data/nix/tests/restricted.nix
    data/nix/tests/dependencies.builder0.sh
    data/nix/tests/function-trace.sh
    data/nix/tests/shell.shebang.sh
    data/nix/tests/fixed.builder2.sh
    data/nix/tests/shell.shebang.rb
    data/nix/tests/nix-channel.sh
    data/nix/tests/parallel.sh
    data/nix/tests/binary-cache.sh
    data/nix/tests/plugins/plugintest.cc
    data/nix/tests/plugins/local.mk
    data/nix/tests/nix-copy-closure.nix
    data/nix/tests/init.sh
    data/nix/tests/placeholders.sh
    data/nix/tests/post-hook.sh
    data/nix/tests/simple.sh
    data/nix/tests/nix-profile.sh
    data/nix/tests/structured-attrs.sh
    data/nix/tests/tarball.sh
    data/nix/tests/check.nix
    data/nix/tests/restricted.sh
    data/nix/tests/user-envs.builder.sh
    data/nix/tests/build-dry.sh
    data/nix/tests/shell.nix
    data/nix/tests/dependencies.sh
    data/nix/tests/case-hack.sh
    data/nix/tests/build-remote.sh
    data/nix/tests/timeout.nix
    data/nix/tests/setuid.nix
    data/nix/tests/fetchGit.sh
    data/nix/tests/multiple-outputs.nix
    data/nix/tests/run.sh
    data/nix/tests/nar-access.sh
    data/nix/tests/nix-build.sh
    data/nix/tests/gc-auto.sh
    data/nix/tests/misc.sh
    data/nix/tests/user-envs.sh
    data/nix/tests/lang/eval-okay-readfile.exp
    data/nix/tests/lang/eval-okay-path.nix
    data/nix/tests/lang/eval-fail-deepseq.nix
    data/nix/tests/lang/eval-fail-abort.nix
    data/nix/tests/lang/eval-okay-scope-2.exp
    data/nix/tests/lang/eval-okay-float.nix
    data/nix/tests/lang/eval-okay-with.nix
    data/nix/tests/lang/eval-okay-let.exp
    data/nix/tests/lang/eval-okay-mapattrs.exp
    data/nix/tests/lang/eval-okay-eq-derivations.exp
    data/nix/tests/lang/eval-okay-versions.nix
    data/nix/tests/lang/eval-okay-string.nix
    data/nix/tests/lang/eval-okay-map.nix
    data/nix/tests/lang/eval-okay-builtins.exp
    data/nix/tests/lang/eval-okay-scope-3.exp
    data/nix/tests/lang/eval-okay-backslash-newline-1.nix
    data/nix/tests/lang/eval-okay-curpos.exp
    data/nix/tests/lang/eval-okay-seq.exp
    data/nix/tests/lang/eval-okay-regex-split.exp
    data/nix/tests/lang/parse-okay-regression-20041027.nix
    data/nix/tests/lang/eval-okay-remove.nix
    data/nix/tests/lang/eval-okay-getattrpos-undefined.exp
    data/nix/tests/lang/eval-okay-new-let.exp
    data/nix/tests/lang/eval-okay-functionargs.nix
    data/nix/tests/lang/eval-okay-scope-1.exp
    data/nix/tests/lang/eval-okay-any-all.nix
    data/nix/tests/lang/eval-okay-filter.nix
    data/nix/tests/lang/eval-okay-list.nix
    data/nix/tests/lang/eval-okay-delayed-with-inherit.nix
    data/nix/tests/lang/eval-okay-autoargs.exp
    data/nix/tests/lang/eval-okay-backslash-newline-2.nix
    data/nix/tests/lang/eval-okay-concat.nix
    data/nix/tests/lang/eval-okay-attrs.exp
    data/nix/tests/lang/eval-okay-functionargs.exp.xml
    data/nix/tests/lang/eval-okay-pathexists.exp
    data/nix/tests/lang/eval-okay-scope-4.exp
    data/nix/tests/lang/eval-fail-hashfile-missing.nix
    data/nix/tests/lang/eval-okay-xml.nix
    data/nix/tests/lang/eval-okay-delayed-with.exp
    data/nix/tests/lang/eval-okay-dynamic-attrs-bare.nix
    data/nix/tests/lang/eval-okay-catattrs.exp
    data/nix/tests/lang/eval-fail-missing-arg.nix
    data/nix/tests/lang/eval-okay-hashstring.exp
    data/nix/tests/lang/eval-okay-context.exp
    data/nix/tests/lang/eval-okay-strings-as-attrs-names.exp
    data/nix/tests/lang/eval-okay-scope-7.exp
    data/nix/tests/lang/eval-okay-splitversion.exp
    data/nix/tests/lang/eval-okay-listtoattrs.nix
    data/nix/tests/lang/eval-okay-context-introspection.nix
    data/nix/tests/lang/eval-okay-dynamic-attrs-2.nix
    data/nix/tests/lang/eval-okay-scope-6.exp
    data/nix/tests/lang/eval-okay-sort.exp
    data/nix/tests/lang/readDir/foo/git-hates-directories
    data/nix/tests/lang/readDir/bar
    data/nix/tests/lang/eval-okay-toxml.nix
    data/nix/tests/lang/eval-okay-replacestrings.nix
    data/nix/tests/lang/eval-okay-nested-with.nix
    data/nix/tests/lang/dir2/a.nix
    data/nix/tests/lang/dir2/b.nix
    data/nix/tests/lang/eval-okay-tojson.nix
    data/nix/tests/lang/eval-okay-tail-call-1.nix
    data/nix/tests/lang/parse-fail-dup-attrs-4.nix
    data/nix/tests/lang/eval-okay-substring.exp
    data/nix/tests/lang/eval-okay-getattrpos.nix
    data/nix/tests/lang/eval-okay-comments.nix
    data/nix/tests/lang/eval-okay-fromTOML.nix
    data/nix/tests/lang/eval-okay-fromjson.exp
    data/nix/tests/lang/eval-okay-builtins-add.nix
    data/nix/tests/lang/eval-fail-remove.nix
    data/nix/tests/lang/parse-okay-url.nix
    data/nix/tests/lang/eval-okay-deepseq.exp
    data/nix/tests/lang/eval-okay-readDir.nix
    data/nix/tests/lang/eval-okay-regex-match.exp
    data/nix/tests/lang/eval-okay-eq.nix
    data/nix/tests/lang/parse-fail-dup-attrs-7.nix
    data/nix/tests/lang/dir4/a.nix
    data/nix/tests/lang/dir4/c.nix
    data/nix/tests/lang/eval-okay-attrs4.exp
    data/nix/tests/lang/dir3/a.nix
    data/nix/tests/lang/dir3/c.nix
    data/nix/tests/lang/dir3/b.nix
    data/nix/tests/lang/eval-okay-callable-attrs.exp
    data/nix/tests/lang/eval-okay-partition.exp
    data/nix/tests/lang/eval-okay-patterns.exp
    data/nix/tests/lang/eval-okay-logic.exp
    data/nix/tests/lang/imported2.nix
    data/nix/tests/lang/eval-okay-attrs5.exp
    data/nix/tests/lang/parse-fail-uft8.nix
    data/nix/tests/lang/parse-okay-1.nix
    data/nix/tests/lang/eval-okay-empty-args.exp
    data/nix/tests/lang/eval-okay-toxml2.nix
    data/nix/tests/lang/eval-okay-if.nix
    data/nix/tests/lang/eval-okay-concatstringssep.nix
    data/nix/tests/lang/eval-okay-arithmetic.exp
    data/nix/tests/lang/eval-okay-concatmap.nix
    data/nix/tests/lang/eval-okay-import.exp
    data/nix/tests/lang/eval-okay-redefine-builtin.exp
    data/nix/tests/lang/eval-okay-elem.exp
    data/nix/tests/lang/eval-okay-ind-string.nix
    data/nix/tests/lang/eval-okay-closure.nix
    data/nix/tests/lang/parse-fail-dup-attrs-2.nix
    data/nix/tests/lang/eval-okay-dynamic-attrs.nix
    data/nix/tests/lang/eval-okay-hashfile.nix
    data/nix/tests/lang/eval-fail-scope-5.nix
    data/nix/tests/lang/eval-okay-tryeval.nix
    data/nix/tests/lang/eval-fail-assert.nix
    data/nix/tests/lang/parse-fail-undef-var.nix
    data/nix/tests/lang/eval-okay-attrnames.nix
    data/nix/tests/lang/parse-fail-dup-attrs-3.nix
    data/nix/tests/lang/eval-okay-null-dynamic-attrs.nix
    data/nix/tests/lang/eval-okay-search-path.exp
    data/nix/tests/lang/eval-okay-getenv.nix
    data/nix/tests/lang/parse-okay-regression-751.nix
    data/nix/tests/lang/parse-fail-dup-attrs-1.nix
    data/nix/tests/lang/eval-okay-attrs2.exp
    data/nix/tests/lang/eval-okay-overrides.exp
    data/nix/tests/lang/eval-okay-attrs3.exp
    data/nix/tests/lang/eval-fail-antiquoted-path.nix
    data/nix/tests/lang/parse-okay-subversion.nix
    data/nix/tests/lang/imported.nix
    data/nix/tests/lang/eval-okay-flatten.exp
    data/nix/tests/lang/eval-okay-types.exp
    data/nix/tests/lang/parse-fail-regression-20060610.nix
    data/nix/tests/lang/eval-okay-flatten.nix
    data/nix/tests/lang/parse-okay-mixed-nested-attrs-1.nix
    data/nix/tests/lang/eval-okay-overrides.nix
    data/nix/tests/lang/eval-okay-attrs3.nix
    data/nix/tests/lang/eval-fail-bad-antiquote-1.nix
    data/nix/tests/lang/binary-data
    data/nix/tests/lang/eval-okay-types.nix
    data/nix/tests/lang/eval-okay-search-path.flags
    data/nix/tests/lang/eval-okay-attrs2.nix
    data/nix/tests/lang/eval-okay-attrnames.exp
    data/nix/tests/lang/parse-okay-mixed-nested-attrs-2.nix
    data/nix/tests/lang/eval-fail-path-slash.nix
    data/nix/tests/lang/eval-fail-bad-antiquote-2.nix
    data/nix/tests/lang/eval-okay-null-dynamic-attrs.exp
    data/nix/tests/lang/eval-okay-getenv.exp
    data/nix/tests/lang/eval-okay-search-path.nix
    data/nix/tests/lang/parse-okay-crlf.nix
    data/nix/tests/lang/eval-okay-ind-string.exp
    data/nix/tests/lang/eval-okay-hash.exp
    data/nix/tests/lang/eval-okay-redefine-builtin.nix
    data/nix/tests/lang/eval-okay-import.nix
    data/nix/tests/lang/eval-okay-eq.exp.disabled
    data/nix/tests/lang/eval-okay-elem.nix
    data/nix/tests/lang/eval-fail-bad-antiquote-3.nix
    data/nix/tests/lang/eval-okay-tryeval.exp
    data/nix/tests/lang/parse-okay-mixed-nested-attrs-3.nix
    data/nix/tests/lang/eval-okay-hashfile.exp
    data/nix/tests/lang/eval-okay-dynamic-attrs.exp
    data/nix/tests/lang/parse-okay-dup-attrs-6.nix
    data/nix/tests/lang/eval-okay-attrs5.nix
    data/nix/tests/lang/eval-okay-logic.nix
    data/nix/tests/lang/eval-okay-concatstringssep.exp
    data/nix/tests/lang/eval-okay-if.exp
    data/nix/tests/lang/eval-okay-concatmap.exp
    data/nix/tests/lang/eval-okay-arithmetic.nix
    data/nix/tests/lang/eval-okay-toxml2.exp
    data/nix/tests/lang/eval-okay-empty-args.nix
    data/nix/tests/lang/parse-fail-mixed-nested-attrs1.nix
    data/nix/tests/lang/eval-okay-partition.nix
    data/nix/tests/lang/eval-okay-callable-attrs.nix
    data/nix/tests/lang/eval-okay-attrs4.nix
    data/nix/tests/lang/eval-okay-patterns.nix
    data/nix/tests/lang/eval-fail-seq.nix
    data/nix/tests/lang/eval-okay-builtins-add.exp
    data/nix/tests/lang/eval-okay-fromjson.nix
    data/nix/tests/lang/parse-fail-undef-var-2.nix
    data/nix/tests/lang/parse-okay-dup-attrs-5.nix
    data/nix/tests/lang/eval-okay-readDir.exp
    data/nix/tests/lang/eval-okay-regex-match.nix
    data/nix/tests/lang/eval-fail-undeclared-arg.nix
    data/nix/tests/lang/eval-okay-deepseq.nix
    data/nix/tests/lang/parse-fail-mixed-nested-attrs2.nix
    data/nix/tests/lang/eval-okay-tojson.exp
    data/nix/tests/lang/eval-okay-comments.exp
    data/nix/tests/lang/eval-okay-fromTOML.exp
    data/nix/tests/lang/eval-okay-substring.nix
    data/nix/tests/lang/eval-okay-getattrpos.exp
    data/nix/tests/lang/eval-okay-dynamic-attrs-2.exp
    data/nix/tests/lang/eval-okay-sort.nix
    data/nix/tests/lang/eval-okay-scope-6.nix
    data/nix/tests/lang/eval-okay-context-introspection.exp
    data/nix/tests/lang/eval-fail-to-path.nix
    data/nix/tests/lang/eval-okay-listtoattrs.exp
    data/nix/tests/lang/eval-okay-toxml.exp
    data/nix/tests/lang/eval-okay-nested-with.exp
    data/nix/tests/lang/eval-okay-replacestrings.exp
    data/nix/tests/lang/eval-okay-autoargs.flags
    data/nix/tests/lang/eval-okay-strings-as-attrs-names.nix
    data/nix/tests/lang/eval-okay-context.nix
    data/nix/tests/lang/dir1/a.nix
    data/nix/tests/lang/eval-okay-hashstring.nix
    data/nix/tests/lang/eval-okay-splitversion.nix
    data/nix/tests/lang/eval-fail-substring.nix
    data/nix/tests/lang/eval-okay-scope-7.nix
    data/nix/tests/lang/eval-okay-catattrs.nix
    data/nix/tests/lang/eval-okay-dynamic-attrs-bare.exp
    data/nix/tests/lang/eval-okay-pathexists.nix
    data/nix/tests/lang/eval-okay-xml.exp.xml
    data/nix/tests/lang/eval-okay-delayed-with.nix
    data/nix/tests/lang/eval-okay-scope-4.nix
    data/nix/tests/lang/data
    data/nix/tests/lang/eval-okay-autoargs.nix
    data/nix/tests/lang/eval-okay-delayed-with-inherit.exp
    data/nix/tests/lang/eval-okay-concat.exp
    data/nix/tests/lang/eval-okay-attrs.nix
    data/nix/tests/lang/eval-okay-backslash-newline-2.exp
    data/nix/tests/lang/eval-okay-getattrpos-undefined.nix
    data/nix/tests/lang/eval-okay-remove.exp
    data/nix/tests/lang/eval-okay-new-let.nix
    data/nix/tests/lang/eval-okay-regex-split.nix
    data/nix/tests/lang/eval-okay-tail-call-1.exp-disabled
    data/nix/tests/lang/eval-okay-closure.exp.xml
    data/nix/tests/lang/eval-fail-blackhole.nix
    data/nix/tests/lang/eval-okay-scope-1.nix
    data/nix/tests/lang/eval-okay-list.exp
    data/nix/tests/lang/eval-okay-filter.exp
    data/nix/tests/lang/eval-okay-any-all.exp
    data/nix/tests/lang/eval-okay-map.exp
    data/nix/tests/lang/eval-okay-string.exp
    data/nix/tests/lang/eval-okay-versions.exp
    data/nix/tests/lang/eval-okay-scope-3.nix
    data/nix/tests/lang/eval-okay-builtins.nix
    data/nix/tests/lang/eval-okay-seq.nix
    data/nix/tests/lang/eval-okay-curpos.nix
    data/nix/tests/lang/eval-okay-backslash-newline-1.exp
    data/nix/tests/lang/eval-okay-readfile.nix
    data/nix/tests/lang/eval-okay-let.nix
    data/nix/tests/lang/lib.nix
    data/nix/tests/lang/parse-fail-dup-formals.nix
    data/nix/tests/lang/eval-okay-eq-derivations.nix
    data/nix/tests/lang/eval-okay-mapattrs.nix
    data/nix/tests/lang/eval-okay-float.exp
    data/nix/tests/lang/eval-okay-scope-2.nix
    data/nix/tests/lang/parse-fail-patterns-1.nix
    data/nix/tests/lang/eval-okay-with.exp
    data/nix/tests/dependencies.nix
    data/nix/tests/repair.sh
    data/nix/tests/remote-builds.nix
    data/nix/tests/logging.sh
    data/nix/tests/export-graph.nix
    data/nix/tests/plugins.sh
    data/nix/tests/dump-db.sh
    data/nix/tests/filter-source.sh
    data/nix/tests/lang.sh
    data/nix/tests/signing.sh
    data/nix/tests/remote-store.sh
    data/nix/tests/fixed.nix
    data/nix/tests/gc.sh
    data/nix/tests/push-to-store.sh
    data/nix/tests/build-hook.nix
    data/nix/tests/pure-eval.nix
    data/nix/tests/parallel.nix
    data/nix/tests/check.sh
    data/nix/tests/add.sh
    data/nix/tests/pure-eval.sh
    data/nix/tests/nix-copy-ssh.sh
    data/nix/tests/check-reqs.nix
    data/nix/tests/common.sh.in
    data/nix/tests/import-derivation.nix
    data/nix/tests/simple.nix
    data/nix/tests/install-darwin.sh
    data/nix/tests/referrers.sh
    data/nix/tests/export-graph.sh
    data/nix/tests/filter-source.nix
    data/nix/tests/fetchMercurial.sh
    data/nix/tests/nix-shell.sh
    data/nix/tests/gc-runtime.nix
    data/nix/tests/fixed.sh
    data/nix/tests/gc-runtime.sh
    data/nix/tests/run.nix
    data/nix/tests/gc-concurrent.nix
    data/nix/tests/fixed.builder1.sh
    data/nix/tests/export.sh
    data/nix/tests/import-derivation.sh
    data/nix/tests/pass-as-file.sh
    data/nix/tests/dependencies.builder2.sh
    data/nix/tests/fetchurl.sh
    data/nix/tests/local.mk
    data/nix/tests/timeout.sh
    data/nix/shell.nix
    data/nix/maintainers/upload-release.pl
    data/nix/contrib/stack-collapse.py
    data/nix/.editorconfig
    data/nix/README.md
    data/nix/release.nix
    data/nix/COPYING
    data/nix/bootstrap.sh
    data/nix/.gitignore
    data/nix/mk/programs.mk
    data/nix/mk/templates.mk
    data/nix/mk/dist.mk
    data/nix/mk/tests.mk
    data/nix/mk/install.mk
    data/nix/mk/lib.mk
    data/nix/mk/README.md
    data/nix/mk/clean.mk
    data/nix/mk/patterns.mk
    data/nix/mk/tracing.mk
    data/nix/mk/functions.mk
    data/nix/mk/jars.mk
    data/nix/mk/libraries.mk
    data/nix/scripts/install-darwin-multi-user.sh
    data/nix/scripts/install-nix-from-closure.sh
    data/nix/scripts/nix-profile.sh.in
    data/nix/scripts/install-systemd-multi-user.sh
    data/nix/scripts/nix-profile-daemon.sh.in
    data/nix/scripts/install-multi-user.sh
    data/nix/scripts/install.in
    data/nix/scripts/nix-reduce-build.in
    data/nix/scripts/local.mk
    data/nix/scripts/nix-http-export.cgi.in
    data/nix/.github/ISSUE_TEMPLATE.md
    data/nix/.version
    data/nix/m4/ax_cxx_compile_stdcxx_17.m4
    data/nix/m4/ax_cxx_compile_stdcxx.m4
    data/nix/doc/manual/nix-lang-ref.xml
    data/nix/doc/manual/command-ref/nix-instantiate.xml
    data/nix/doc/manual/command-ref/nix-prefetch-url.xml
    data/nix/doc/manual/command-ref/nix-shell.xml
    data/nix/doc/manual/command-ref/nix-build.xml
    data/nix/doc/manual/command-ref/nix-hash.xml
    data/nix/doc/manual/command-ref/env-common.xml
    data/nix/doc/manual/command-ref/nix-store.xml
    data/nix/doc/manual/command-ref/nix-copy-closure.xml
    data/nix/doc/manual/command-ref/conf-file.xml
    data/nix/doc/manual/command-ref/nix-collect-garbage.xml
    data/nix/doc/manual/command-ref/files.xml
    data/nix/doc/manual/command-ref/main-commands.xml
    data/nix/doc/manual/command-ref/opt-inst-syn.xml
    data/nix/doc/manual/command-ref/command-ref.xml
    data/nix/doc/manual/command-ref/nix-env.xml
    data/nix/doc/manual/command-ref/opt-common.xml
    data/nix/doc/manual/command-ref/utilities.xml
    data/nix/doc/manual/command-ref/nix-daemon.xml
    data/nix/doc/manual/command-ref/nix-channel.xml
    data/nix/doc/manual/command-ref/opt-common-syn.xml
    data/nix/doc/manual/advanced-topics/post-build-hook.xml
    data/nix/doc/manual/advanced-topics/advanced-topics.xml
    data/nix/doc/manual/advanced-topics/distributed-builds.xml
    data/nix/doc/manual/advanced-topics/cores-vs-jobs.xml
    data/nix/doc/manual/advanced-topics/diff-hook.xml
    data/nix/doc/manual/images/callouts/4.gif
    data/nix/doc/manual/images/callouts/5.gif
    data/nix/doc/manual/images/callouts/7.gif
    data/nix/doc/manual/images/callouts/6.gif
    data/nix/doc/manual/images/callouts/2.gif
    data/nix/doc/manual/images/callouts/3.gif
    data/nix/doc/manual/images/callouts/1.gif
    data/nix/doc/manual/images/callouts/8.gif
    data/nix/doc/manual/images/callouts/9.gif
    data/nix/doc/manual/images/callouts/14.gif
    data/nix/doc/manual/images/callouts/15.gif
    data/nix/doc/manual/images/callouts/12.gif
    data/nix/doc/manual/images/callouts/13.gif
    data/nix/doc/manual/images/callouts/11.gif
    data/nix/doc/manual/images/callouts/10.gif
    data/nix/doc/manual/hacking.xml
    data/nix/doc/manual/introduction/quick-start.xml
    data/nix/doc/manual/introduction/about-nix.xml
    data/nix/doc/manual/introduction/introduction.xml
    data/nix/doc/manual/installation/multi-user.xml
    data/nix/doc/manual/installation/supported-platforms.xml
    data/nix/doc/manual/installation/nix-security.xml
    data/nix/doc/manual/installation/prerequisites-source.xml
    data/nix/doc/manual/installation/env-variables.xml
    data/nix/doc/manual/installation/installation.xml
    data/nix/doc/manual/installation/building-source.xml
    data/nix/doc/manual/installation/single-user.xml
    data/nix/doc/manual/installation/installing-binary.xml
    data/nix/doc/manual/installation/obtaining-source.xml
    data/nix/doc/manual/installation/installing-source.xml
    data/nix/doc/manual/installation/upgrading.xml
    data/nix/doc/manual/release-notes/rl-2.1.xml
    data/nix/doc/manual/release-notes/rl-2.0.xml
    data/nix/doc/manual/release-notes/release-notes.xml
    data/nix/doc/manual/release-notes/rl-0.8.1.xml
    data/nix/doc/manual/release-notes/rl-2.2.xml
    data/nix/doc/manual/release-notes/rl-2.3.xml
    data/nix/doc/manual/release-notes/rl-0.5.xml
    data/nix/doc/manual/release-notes/rl-0.6.xml
    data/nix/doc/manual/release-notes/rl-1.11.10.xml
    data/nix/doc/manual/release-notes/rl-0.7.xml
    data/nix/doc/manual/release-notes/rl-1.0.xml
    data/nix/doc/manual/release-notes/rl-0.9.1.xml
    data/nix/doc/manual/release-notes/rl-1.1.xml
    data/nix/doc/manual/release-notes/rl-1.3.xml
    data/nix/doc/manual/release-notes/rl-0.9.2.xml
    data/nix/doc/manual/release-notes/rl-1.2.xml
    data/nix/doc/manual/release-notes/rl-1.6.xml
    data/nix/doc/manual/release-notes/rl-1.7.xml
    data/nix/doc/manual/release-notes/rl-1.5.xml
    data/nix/doc/manual/release-notes/rl-0.10.1.xml
    data/nix/doc/manual/release-notes/rl-1.10.xml
    data/nix/doc/manual/release-notes/rl-1.11.xml
    data/nix/doc/manual/release-notes/rl-1.4.xml
    data/nix/doc/manual/release-notes/rl-1.9.xml
    data/nix/doc/manual/release-notes/rl-1.5.1.xml
    data/nix/doc/manual/release-notes/rl-1.8.xml
    data/nix/doc/manual/release-notes/rl-1.5.2.xml
    data/nix/doc/manual/release-notes/rl-1.6.1.xml
    data/nix/doc/manual/release-notes/rl-0.16.xml
    data/nix/doc/manual/release-notes/rl-0.14.xml
    data/nix/doc/manual/release-notes/rl-0.9.xml
    data/nix/doc/manual/release-notes/rl-0.8.xml
    data/nix/doc/manual/release-notes/rl-0.15.xml
    data/nix/doc/manual/release-notes/rl-0.11.xml
    data/nix/doc/manual/release-notes/rl-0.10.xml
    data/nix/doc/manual/release-notes/rl-0.12.xml
    data/nix/doc/manual/release-notes/rl-0.13.xml
    data/nix/doc/manual/manual.xml
    data/nix/doc/manual/figures/user-environments.png
    data/nix/doc/manual/figures/user-environments.sxd
    data/nix/doc/manual/schemas.xml
    data/nix/doc/manual/packages/s3-substituter.xml
    data/nix/doc/manual/packages/copy-closure.xml
    data/nix/doc/manual/packages/package-management.xml
    data/nix/doc/manual/packages/ssh-substituter.xml
    data/nix/doc/manual/packages/basic-package-mgmt.xml
    data/nix/doc/manual/packages/channels.xml
    data/nix/doc/manual/packages/binary-cache-substituter.xml
    data/nix/doc/manual/packages/sharing-packages.xml
    data/nix/doc/manual/packages/garbage-collector-roots.xml
    data/nix/doc/manual/packages/profiles.xml
    data/nix/doc/manual/packages/garbage-collection.xml
    data/nix/doc/manual/style.css
    data/nix/doc/manual/expressions/language-constructs.xml
    data/nix/doc/manual/expressions/expression-syntax.xml
    data/nix/doc/manual/expressions/language-operators.xml
    data/nix/doc/manual/expressions/advanced-attributes.xml
    data/nix/doc/manual/expressions/language-values.xml
    data/nix/doc/manual/expressions/simple-expression.xml
    data/nix/doc/manual/expressions/derivations.xml
    data/nix/doc/manual/expressions/simple-building-testing.xml
    data/nix/doc/manual/expressions/arguments-variables.xml
    data/nix/doc/manual/expressions/expression-language.xml
    data/nix/doc/manual/expressions/build-script.xml
    data/nix/doc/manual/expressions/writing-nix-expressions.xml
    data/nix/doc/manual/expressions/generic-builder.xml
    data/nix/doc/manual/expressions/builder-syntax.xml
    data/nix/doc/manual/expressions/builtins.xml
    data/nix/doc/manual/quote-literals.xsl
    data/nix/doc/manual/glossary/glossary.xml
    data/nix/doc/manual/local.mk
    data/nix/.git
    data/nix/.travis.yml
    data/nix/release-common.nix
    data/nix/local.mk
    data/nix/src/nix-prefetch-url/nix-prefetch-url.cc
    data/nix/src/resolve-system-dependencies/resolve-system-dependencies.cc
    data/nix/src/resolve-system-dependencies/local.mk
    data/nix/src/nix-copy-closure/nix-copy-closure.cc
    data/nix/src/libmain/shared.hh
    data/nix/src/libmain/common-args.cc
    data/nix/src/libmain/shared.cc
    data/nix/src/libmain/common-args.hh
    data/nix/src/libmain/stack.cc
    data/nix/src/libmain/nix-main.pc.in
    data/nix/src/libmain/local.mk
    data/nix/src/nix/main.cc
    data/nix/src/nix/verify.cc
    data/nix/src/nix/eval.cc
    data/nix/src/nix/path-info.cc
    data/nix/src/nix/why-depends.cc
    data/nix/src/nix/sigs.cc
    data/nix/src/nix/doctor.cc
    data/nix/src/nix/add-to-store.cc
    data/nix/src/nix/ping-store.cc
    data/nix/src/nix/show-config.cc
    data/nix/src/nix/hash.cc
    data/nix/src/nix/optimise-store.cc
    data/nix/src/nix/installables.cc
    data/nix/src/nix/search.cc
    data/nix/src/nix/dump-path.cc
    data/nix/src/nix/command.hh
    data/nix/src/nix/show-derivation.cc
    data/nix/src/nix/repl.cc
    data/nix/src/nix/cat.cc
    data/nix/src/nix/legacy.hh
    data/nix/src/nix/ls.cc
    data/nix/src/nix/progress-bar.cc
    data/nix/src/nix/copy.cc
    data/nix/src/nix/edit.cc
    data/nix/src/nix/progress-bar.hh
    data/nix/src/nix/run.cc
    data/nix/src/nix/upgrade-nix.cc
    data/nix/src/nix/build.cc
    data/nix/src/nix/log.cc
    data/nix/src/nix/local.mk
    data/nix/src/nix/command.cc
    data/nix/src/nix/legacy.cc
    data/nix/src/nix-daemon/nix-daemon.cc
    data/nix/src/nix-channel/nix-channel.cc
    data/nix/src/nix-collect-garbage/nix-collect-garbage.cc
    data/nix/src/nix-env/nix-env.cc
    data/nix/src/nix-env/user-env.hh
    data/nix/src/nix-env/user-env.cc
    data/nix/src/cpptoml/LICENSE
    data/nix/src/cpptoml/cpptoml.h
    data/nix/src/libexpr/function-trace.hh
    data/nix/src/libexpr/eval.cc
    data/nix/src/libexpr/symbol-table.hh
    data/nix/src/libexpr/names.hh
    data/nix/src/libexpr/nix-expr.pc.in
    data/nix/src/libexpr/value-to-json.cc
    data/nix/src/libexpr/lexer.l
    data/nix/src/libexpr/names.cc
    data/nix/src/libexpr/value-to-json.hh
    data/nix/src/libexpr/value.hh
    data/nix/src/libexpr/eval.hh
    data/nix/src/libexpr/primops.cc
    data/nix/src/libexpr/nixexpr.hh
    data/nix/src/libexpr/primops/fetchGit.cc
    data/nix/src/libexpr/primops/context.cc
    data/nix/src/libexpr/primops/fetchMercurial.cc
    data/nix/src/libexpr/primops/fromTOML.cc
    data/nix/src/libexpr/get-drvs.hh
    data/nix/src/libexpr/attr-path.hh
    data/nix/src/libexpr/attr-set.hh
    data/nix/src/libexpr/json-to-value.cc
    data/nix/src/libexpr/common-eval-args.hh
    data/nix/src/libexpr/value-to-xml.hh
    data/nix/src/libexpr/attr-path.cc
    data/nix/src/libexpr/parser.y
    data/nix/src/libexpr/get-drvs.cc
    data/nix/src/libexpr/attr-set.cc
    data/nix/src/libexpr/eval-inline.hh
    data/nix/src/libexpr/json-to-value.hh
    data/nix/src/libexpr/value-to-xml.cc
    data/nix/src/libexpr/common-eval-args.cc
    data/nix/src/libexpr/primops.hh
    data/nix/src/libexpr/local.mk
    data/nix/src/libexpr/nixexpr.cc
    data/nix/src/build-remote/build-remote.cc
    data/nix/src/nix-store/graphml.cc
    data/nix/src/nix-store/dotgraph.cc
    data/nix/src/nix-store/dotgraph.hh
    data/nix/src/nix-store/graphml.hh
    data/nix/src/nix-store/nix-store.cc
    data/nix/src/nlohmann/json.hpp
    data/nix/src/nix-build/nix-build.cc
    data/nix/src/libutil/archive.hh
    data/nix/src/libutil/args.hh
    data/nix/src/libutil/serialise.cc
    data/nix/src/libutil/ref.hh
    data/nix/src/libutil/lru-cache.hh
    data/nix/src/libutil/json.cc
    data/nix/src/libutil/istringstream_nocopy.hh
    data/nix/src/libutil/hash.hh
    data/nix/src/libutil/hash.cc
    data/nix/src/libutil/json.hh
    data/nix/src/libutil/args.cc
    data/nix/src/libutil/lazy.hh
    data/nix/src/libutil/archive.cc
    data/nix/src/libutil/pool.hh
    data/nix/src/libutil/serialise.hh
    data/nix/src/libutil/compression.cc
    data/nix/src/libutil/xml-writer.cc
    data/nix/src/libutil/thread-pool.hh
    data/nix/src/libutil/util.cc
    data/nix/src/libutil/config.hh
    data/nix/src/libutil/monitor-fd.hh
    data/nix/src/libutil/finally.hh
    data/nix/src/libutil/affinity.cc
    data/nix/src/libutil/sync.hh
    data/nix/src/libutil/logging.hh
    data/nix/src/libutil/types.hh
    data/nix/src/libutil/affinity.hh
    data/nix/src/libutil/logging.cc
    data/nix/src/libutil/xml-writer.hh
    data/nix/src/libutil/compression.hh
    data/nix/src/libutil/thread-pool.cc
    data/nix/src/libutil/util.hh
    data/nix/src/libutil/local.mk
    data/nix/src/libutil/config.cc
    data/nix/src/libstore/nar-accessor.hh
    data/nix/src/libstore/legacy-ssh-store.cc
    data/nix/src/libstore/remote-fs-accessor.hh
    data/nix/src/libstore/ssh.cc
    data/nix/src/libstore/pathlocks.cc
    data/nix/src/libstore/local-store.cc
    data/nix/src/libstore/crypto.hh
    data/nix/src/libstore/parsed-derivations.hh
    data/nix/src/libstore/serve-protocol.hh
    data/nix/src/libstore/nar-info.cc
    data/nix/src/libstore/nar-info-disk-cache.hh
    data/nix/src/libstore/nix-store.pc.in
    data/nix/src/libstore/binary-cache-store.hh
    data/nix/src/libstore/profiles.cc
    data/nix/src/libstore/local-store.hh
    data/nix/src/libstore/crypto.cc
    data/nix/src/libstore/schema.sql
    data/nix/src/libstore/ssh-store.cc
    data/nix/src/libstore/pathlocks.hh
    data/nix/src/libstore/nar-info.hh
    data/nix/src/libstore/fs-accessor.hh
    data/nix/src/libstore/parsed-derivations.cc
    data/nix/src/libstore/nar-info-disk-cache.cc
    data/nix/src/libstore/binary-cache-store.cc
    data/nix/src/libstore/optimise-store.cc
    data/nix/src/libstore/profiles.hh
    data/nix/src/libstore/s3.hh
    data/nix/src/libstore/nar-accessor.cc
    data/nix/src/libstore/ssh.hh
    data/nix/src/libstore/builtins/buildenv.cc
    data/nix/src/libstore/builtins/fetchurl.cc
    data/nix/src/libstore/remote-fs-accessor.cc
    data/nix/src/libstore/download.cc
    data/nix/src/libstore/derivations.hh
    data/nix/src/libstore/remote-store.hh
    data/nix/src/libstore/globals.cc
    data/nix/src/libstore/references.hh
    data/nix/src/libstore/export-import.cc
    data/nix/src/libstore/machines.cc
    data/nix/src/libstore/store-api.cc
    data/nix/src/libstore/http-binary-cache-store.cc
    data/nix/src/libstore/local-fs-store.cc
    data/nix/src/libstore/sqlite.cc
    data/nix/src/libstore/s3-binary-cache-store.hh
    data/nix/src/libstore/local-binary-cache-store.cc
    data/nix/src/libstore/worker-protocol.hh
    data/nix/src/libstore/misc.cc
    data/nix/src/libstore/store-api.hh
    data/nix/src/libstore/sandbox-network.sb
    data/nix/src/libstore/s3-binary-cache-store.cc
    data/nix/src/libstore/sqlite.hh
    data/nix/src/libstore/sandbox-minimal.sb
    data/nix/src/libstore/build.cc
    data/nix/src/libstore/sandbox-defaults.sb
    data/nix/src/libstore/remote-store.cc
    data/nix/src/libstore/globals.hh
    data/nix/src/libstore/download.hh
    data/nix/src/libstore/derivations.cc
    data/nix/src/libstore/gc.cc
    data/nix/src/libstore/references.cc
    data/nix/src/libstore/local.mk
    data/nix/src/libstore/builtins.hh
    data/nix/src/libstore/machines.hh
    data/nix/src/nix-instantiate/nix-instantiate.cc
    data/nixpkgs-all-packages.nix
    data/let-comments.nix
    data/let-comments-multiline.nix
    data/simple-pretty.nix
    data/simple.nix
    data/nixpkgs-all-packages-pretty.nix
    data/let.nix
    LICENSE
    README.md
    tests/eval-compare/builtins.split-01.nix
    tests/eval-compare/builtins.split-02.nix
    tests/eval-compare/builtins.split-03.nix
    tests/eval-compare/builtins.split-04.nix
    tests/eval-compare/builtins.string.store.nix
    tests/eval-compare/ind-string-01.nix
    tests/eval-compare/ind-string-02.nix
    tests/eval-compare/ind-string-03.nix
    tests/eval-compare/ind-string-04.nix
    tests/eval-compare/ind-string-05.nix
    tests/eval-compare/ind-string-06.nix
    tests/eval-compare/ind-string-07.nix
    tests/eval-compare/ind-string-08.nix
    tests/eval-compare/ind-string-09.nix
    tests/eval-compare/ind-string-10.nix
    tests/eval-compare/ind-string-11.nix
    tests/eval-compare/ind-string-12.nix
    tests/eval-compare/ind-string-13.nix
    tests/eval-compare/ind-string-14.nix
    tests/eval-compare/ind-string-15.nix
    tests/eval-compare/ind-string-16.nix
    tests/eval-compare/ind-string-17.nix

source-repository head
  type: git
  location: https://github.com/haskell-nix/hnix

flag optimize
  description: Enable all optimization flags
  manual: True
  default: False

flag profiling
  description: Enable profiling
  manual: True
  default: False

library
  exposed-modules:
      Nix
      Nix.Atoms
      Nix.Builtins
      Nix.Cache
      Nix.Cited
      Nix.Cited.Basic
      Nix.Context
      Nix.Convert
      Nix.Effects
      Nix.Effects.Basic
      Nix.Eval
      Nix.Exec
      Nix.Expr
      Nix.Expr.Shorthands
      Nix.Expr.Strings
      Nix.Expr.Types
      Nix.Expr.Types.Annotated
      Nix.Frames
      Nix.Fresh
      Nix.Fresh.Basic
      Nix.Json
      Nix.Lint
      Nix.Normal
      Nix.Options
      Nix.Parser
      Nix.Pretty
      Nix.Reduce
      Nix.Render
      Nix.Render.Frame
      Nix.Scope
      Nix.Standard
      Nix.String
      Nix.String.Coerce
      Nix.TH
      Nix.Thunk
      Nix.Thunk.Basic
      Nix.Type.Assumption
      Nix.Type.Env
      Nix.Type.Infer
      Nix.Type.Type
      Nix.Utils
      Nix.Utils.Fix1
      Nix.Value
      Nix.Value.Equal
      Nix.Value.Monad
      Nix.Var
      Nix.XML
  other-modules:
      Paths_hnix
  hs-source-dirs:
      src
  ghc-options: -Wall -fprint-potential-instances
  build-depends:
      aeson >= 1.4.2 && < 1.5
    , array >=0.4 && <0.6
    , base >=4.11 && <5
    , binary >= 0.8.5 && < 0.9
    , bytestring >= 0.10.8 && < 0.11
    , comonad >= 5.0.4 && < 5.1
    , containers >= 0.5.11.0 && < 0.7
    , contravariant >= 1.5 && < 1.6
    , data-fix >= 0.2.0 && <  0.3
    , deepseq >=1.4.3 && <1.5
    , dependent-sum >= 0.4 && < 0.5 || >= 0.6.2.0 && < 0.7
    , deriving-compat >=0.3 && <0.6
    , directory >= 1.3.1 && < 1.4
    , exceptions >= 0.10.0 && < 0.11
    , filepath >= 1.4.2 && < 1.5
    , free >= 5.1 && < 5.2
    , hashable >=1.2.5 && < 1.4
    , hashing >= 0.1.0 && < 0.2
    , hnix-store-core >= 0.1.0 && < 0.3
    , http-client >= 0.5.14 && < 0.6 || >= 0.6.4 && < 0.7
    , http-client-tls >= 0.3.5 && < 0.4
    , http-types >= 0.12.2 && < 0.13
    , interpolate >= 0.2.0 && < 0.3
    , lens-family >=1.2.2
    , lens-family-core >=1.2.2
    , lens-family-th >= 0.5.0 && < 0.6
    , logict >= 0.6.0 && < 0.7 || >= 0.7.0.2 && < 0.8
    , megaparsec >=7.0 && <8.1
    , monad-control >= 1.0.2 && < 1.1
    , monadlist >= 0.0.2 && < 0.1
    , mtl >= 2.2.2 && < 2.3
    , optparse-applicative >= 0.14.3 && < 0.15 || >= 0.15.0.0 && < 0.16
    , parser-combinators >= 1.0.1 && < 1.3
    , prettyprinter >= 1.2.1 && < 1.7
    , process >= 1.6.3 && < 1.7
    , ref-tf >= 0.4.0 && < 0.5
    , regex-tdfa >= 1.2.3 && < 1.4
    , scientific >= 0.3.6 && < 0.4
    , semialign >= 1 && < 1.2
    , semialign-indexed >= 1 && < 1.2
    , semigroups >=0.18 && <0.19 || >= 0.19.1 && < 0.20
    , split >= 0.2.3 && < 0.3
    , syb >= 0.7 && < 0.8
    , template-haskell
    , text >= 1.2.3 && < 1.3
    , these >= 1.0.1 && < 1.1
    , time >= 1.8.0 && < 1.9 || >= 1.9.3 && < 1.10
    , transformers >= 0.5.5 && < 0.6
    , transformers-base >= 0.4.5 && < 0.5
    , unix >= 2.7.2 && < 2.8
    , unordered-containers >=0.2.9 && < 0.3
    , vector >= 0.12.0 && < 0.13
    , xml >= 1.3.14 && < 1.4
  if flag(optimize)
    ghc-options: -fexpose-all-unfoldings -fspecialise-aggressively -O2
  if !impl(ghcjs)
    exposed-modules:
        Nix.Options.Parser
    build-depends:
        base16-bytestring >= 0.1.1 && < 0.2
      , cryptohash-md5 >= 0.11.100 && < 0.12
      , cryptohash-sha1 >= 0.11.100 && < 0.12
      , cryptohash-sha256 >= 0.11.101 && < 0.12
      , cryptohash-sha512 >= 0.11.100 && < 0.12
      , haskeline >= 0.7.4.2 && < 0.8
      , pretty-show >= 1.9.5 && < 1.11
      , serialise >= 0.2.1 && < 0.3
  -- if !flag(profiling)
  --   build-depends:
  --       ghc-datasize
  default-language: Haskell2010

executable hnix
  main-is: Main.hs
  other-modules:
      Repl
      Paths_hnix
  hs-source-dirs:
      main
  ghc-options: -Wall -rtsopts
  build-depends:
      aeson
    , base
    , base16-bytestring
    , bytestring
    , comonad
    , containers
    , cryptohash-md5
    , cryptohash-sha1
    , cryptohash-sha256
    , cryptohash-sha512
    , data-fix
    , deepseq
    , exceptions
    , filepath
    , free
    , hashing
    , haskeline
    , hnix
    , mtl
    , optparse-applicative
    , pretty-show
    , prettyprinter
    , ref-tf
    , repline
    , serialise
    , template-haskell
    , text
    , time
    , transformers
    , unordered-containers
  if flag(optimize)
    ghc-options: -fexpose-all-unfoldings -fspecialise-aggressively -O2
  if impl(ghcjs)
    buildable: False
  default-language: Haskell2010

test-suite hnix-tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      EvalTests
      NixLanguageTests
      ParserTests
      PrettyParseTests
      PrettyTests
      ReduceExprTests
      TestCommon
      Paths_hnix
  hs-source-dirs:
      tests
  ghc-options: -Wall -threaded
  build-depends:
      Diff
    , Glob
    , base >=4.11 && <5
    , base16-bytestring
    , bytestring
    , containers
    , cryptohash-md5
    , cryptohash-sha1
    , cryptohash-sha256
    , cryptohash-sha512
    , data-fix
    , deepseq >=1.4.3 && <1.5
    , dependent-sum
    , directory
    , exceptions
    , filepath
    , generic-random
    , hashing
    , hedgehog
    , hnix
    , interpolate
    , megaparsec >=7.0 && <8.1
    , mtl
    , optparse-applicative
    , pretty-show
    , prettyprinter
    , process
    , split
    , tasty
    , tasty-hedgehog
    , tasty-hunit
    , tasty-quickcheck
    , tasty-th
    , serialise
    , template-haskell
    , text
    , time
    , transformers
    , unix
    , unordered-containers >=0.2.9 && <0.3
  if flag(optimize)
    ghc-options: -fexpose-all-unfoldings -fspecialise-aggressively -O2
  if impl(ghcjs)
    buildable: False
  default-language: Haskell2010

benchmark hnix-benchmarks
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      ParserBench
      Paths_hnix
  hs-source-dirs:
      benchmarks
  ghc-options: -Wall
  build-depends:
      base >=4.11 && <5
    , base16-bytestring
    , bytestring
    , containers
    , criterion
    , cryptohash-md5
    , cryptohash-sha1
    , cryptohash-sha256
    , cryptohash-sha512
    , data-fix
    , deepseq >=1.4.3 && <1.5
    , exceptions
    , filepath
    , hashing
    , hnix
    , mtl
    , optparse-applicative
    , serialise
    , template-haskell
    , text
    , time
    , transformers
    , unordered-containers >=0.2.9 && <0.3
  if flag(optimize)
    ghc-options: -fexpose-all-unfoldings -fspecialise-aggressively -O2
  if impl(ghcjs)
    buildable: False
  default-language: Haskell2010
